name: Login
appId: ${MAESTRO_APP_ID}
tags:
  - development
  - staging
  - production
  - auth
  - pull-request
---
- clearState
- launchApp
- tapOn:
    id: loginEmailTextField
- inputText: ${MAESTRO_APP_EMAIL}
- tapOn:
    id: loginPasswordTextField
- inputText: ${MAESTRO_APP_PASSWORD}
- tapOn:
    id: loginLoginAction
- assertVisible:
    id: navItem_Work
- assertVisible:
    id: navItem_Menu
