name: Work filters sections visibility
appId: ${MAESTRO_APP_ID}
tags:
  - development
  - staging
  - production
  - pull-request
onFlowStart:
  - runFlow: ../auth-tests/login.yaml
---
# wait for incidents to load
- waitForAnimationToEnd:
    timeout: 5000
# wait till spinner is invisible
- assertNotVisible:
    id: workIncidentsLoadingIndicator
- tapOn:
    id: "workIncidentFilterBtn"
- assertVisible: "Filters"

- scrollUntilVisible:
    element:
        id: filterHeaderCollapsibleTitle_Distance
    direction: DOWN
- assertVisible:
    id: "filterHeaderCollapsibleTitle_Distance"

- scrollUntilVisible:
    element:
        id: filterHeaderCollapsibleTitle_General
    direction: DOWN
- assertVisible:
    id: "filterHeaderCollapsibleTitle_General"

- scrollUntilVisible:
    element:
        id: "filterHeaderCollapsibleTitle_Personal Info"
    direction: DOWN
- assertVisible:
    id: "filterHeaderCollapsibleTitle_Personal Info"

- scrollUntilVisible:
    element:
        id: "filterHeaderCollapsibleTitle_Flags"
    direction: DOWN
- assertVisible:
    id: "filterHeaderCollapsibleTitle_Flags"

- scrollUntilVisible:
    element:
        id: "filterHeaderCollapsibleTitle_Work"
    direction: DOWN
- assertVisible:
    id: "filterHeaderCollapsibleTitle_Work"

- scrollUntilVisible:
    element:
        id: "filterHeaderCollapsibleTitle_Dates"
    direction: DOWN
- assertVisible:
    id: "filterHeaderCollapsibleTitle_Dates"
